--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>This is local-repo3</p>
-<p>This is features2 (Added dropdown)</p>
+<p>This is features2 (dropdown)</p>
 <p>This features1 (button)</p>
