--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>This is local-repo3</p>
-<p>This is features2 (dropdown)</p>
+<p>This is features2 (dropdown1)</p>
+<p>Added features2(dropdown2)</p>
 <p>This features1 (button)</p>
